[gd_scene load_steps=5 format=3 uid="uid://cq8i4nsghjio4"]

[ext_resource type="Script" path="res://InfiniteModeMainMenu.gd" id="1_431xr"]
[ext_resource type="Theme" uid="uid://b2mieut3kuy46" path="res://MainMenuTheme.tres" id="1_addc4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yuv7p"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uh6va"]
bg_color = Color(0.6, 0, 0.976471, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.196078, 0.196078, 0.196078, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[node name="InfiniteModeMainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_addc4")
script = ExtResource("1_431xr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -33.0
offset_right = 48.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_yuv7p")
bbcode_enabled = true
text = "[rainbow freq=0.5 sat=10 val=20][center]Poly Pals[/center][/rainbow]"
fit_content = true
scroll_active = false

[node name="TopScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Top Score:
 "
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Max Block Size:
6"
horizontal_alignment = 1

[node name="DifficultySlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_uh6va")
min_value = 4.0
max_value = 10.0
value = 6.0
tick_count = 7
ticks_on_borders = true

[node name="DifficultyTopScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Top Score for size 6:
 "
horizontal_alignment = 1

[node name="ColourLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Background Colour Picker:"
horizontal_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Background Colour"
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="GridTileColorPicker" type="ColorPickerButton" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Background Colour"
color = Color(0, 0, 1, 0.490196)

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
